--- a/src/style.css
+++ b/src/style.css
@@ -106,3 +106,20 @@ li {
 .icon:hover {
   opacity: 1;
 }
+
+.completed-checkbox{
+  margin: 0 !important;
+}
+
+.task-description{
+  background: transparent;
+  width: 90%;
+  padding: 5px;
+  border: none;
+}
+.strike { 
+  text-decoration: line-through; 
+}
+.no-strike { 
+  text-decoration: none; 
+}
