--- a/src/style.css
+++ b/src/style.css
@@ -65,6 +65,7 @@ h1 {
   font-size: 15px;
   padding: 10px;
   border: none;
+  outline: none;
   background-color: rgba(240, 248, 255, 0);
 }
 
@@ -116,6 +117,7 @@ li {
   width: 90%;
   padding: 5px;
   border: none;
+  outline: none;
 }
 
 .strike {
